2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
	
2005-10-4 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* most-cairo-related-places: added lots of stuff to do with gradients, objectBoundBox positioning and spreading. Made currentColor work with cairo. Made courners look great in cairo but crap in libart... I just can't win.

2005-10-04  Dom Lachowicz <cinamod@hotmail.com>
	
	* rsvg-shapes.c: Fix problems in non-C locales. Bug #317615
	
2005-10-03 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c, rsvg-art-paint-server.c: Fix bug #317871

2005-10-03 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: made a new function called rsvg_state_reconstruct that can make a style inherit from a node's ancestors rather than the drawing context.
	* rsvg-paint-server.c: Made stop colour inheritance and currentColor usage work.
	* rsvg-art-paint-server.c, rsvg-cairo-draw.c: removed redundant code in colour inheritance.
	* rsvg-marker.c: use the new reconstruction function

2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug 314593, support firefox-config
	
2005-09-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug #317549
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-structure.c:
	* rsvg-shapes.c: Bug 371148 - C89 fixes

	* gdk-pixbuf-loader/Makefile.am
	* gtk-engine/Makefile.am: Bug 316803 - Win32 mingw build fixes
	
2005-09-22  Rodney Dawes  <dobey@novell.com>

	* configure.in: GNOME_REQUIRE_PKGCONFIG doesn't exist, so remove it
	so that we don't get a weird warning when running configure

2005-09-16  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Scan the first 1024 chars for <svg. 100
	Wasn't sufficient for a lot of icon themes.
	
2005-08-10 Caleb Moore <c.moore@student.unsw.edu.au>
	